istio-manifests/multicluster/dr-frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 3
      interval: 2m
      baseEjectionTime: 1m
