istio-manifests/multicluster/dr-productcatalog.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productcatalogservice
spec:
  host: productcatalogservice
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 3
      interval: 1m
      baseEjectionTime: 2s
